language/move-lang/tests/move_check/translated_ir_tests/move/signer/move_to_non_resource.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/translated_ir_tests/move/signer/move_to_non_resource.move:4:9
  │
2 │     struct R { f: bool }
  │            - To satisfy the constraint, the 'key' ability would need to be added here
3 │     fun t0(s: &signer) {
4 │         move_to(s, R { f: false })
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         │          │
  │         │          The type '0x8675309::M::R' does not have the ability 'key'
  │         Invalid call of 'move_to'

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/translated_ir_tests/move/signer/move_to_non_resource.move:14:14
   │
12 │     struct R<T> { f: T }
   │            - To satisfy the constraint, the 'key' ability would need to be added here
13 │     fun t0<T: store>(s: &signer) {
14 │         () = move_to(s, R { f: false })
   │              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   │              │          │
   │              │          The type '0x8675309::N::R<bool>' does not have the ability 'key'
   │              Invalid call of 'move_to'

